[tool.poetry]
name = "pocketbase-async"
version = "0.9.0"
description = "Async pocketbase SDK for Python"
repository = "https://github.com/thijsmie/pocketbase-async"
authors = ["Thijs Miedema <opensource@tmiedema.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pocketbase", from="src" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = ">=0.25.1,<1"
httpx-sse = ">=0.4.0,<1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-asyncio = ">=0.21.0,<1"
ruff = "0.1.*"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["A", "C", "E", "F", "UP", "RUF", "I", "PL", "PTH", "TID252", "SIM"]
ignore = ["E402", "PLR2004", "PLR0913"]
fixable = ["C", "E", "F", "UP", "I", "PL", "RUF", "PTH", "PLC", "TID252", "SIM"]
line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
check_untyped_defs = true
show_column_numbers = true
no_implicit_optional = true
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
